# cpp-cmake-template-project

./: CMakeLists.txt
include/: resource.h
src/: CMakeLists.txt  main.cpp  my_program  resource.cpp
